src/app/globals.css
:root {
  --bg: oklch(.28 0.02 206);
  --bg-dark: oklch(from var(--bg) calc(l - .05) c h);
  --bg-light: oklch(from var(--bg) calc(l + .05) c h);

  --fg: oklch(.82 0 271);
  --fg-dark: oklch(from var(--fg) calc(l - .1) c h);
  --fg-light: oklch(from var(--fg) calc(l + .1) c h);

  /* --accent: oklch(.66 0.21 36); */
  --accent: oklch(0.78 0.17 79.48);
  --accent-dark: oklch(from var(--accent) calc(l - .05) c h);
  --accent-light: oklch(from var(--accent) calc(l + .05) c h);

  --background: var(--bg-dark);
  --foreground: var(--fg);

  --bg-gradient: linear-gradient(135deg,rgba(29, 44, 46, 1) 0%, rgba(5, 71, 44, 1) 100%);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: var(--bg-dark);
    --foreground: var(--fg);
  }
}

html,
body {
  max-width: 100vw;
  height: 100dvh;
  overflow-x: hidden;
  background-color: rgba(5, 71, 44, 1);
}

body {
  color: var(--foreground);
  background: var(--bg-gradient);
  background-attachment: scroll;
  font-family: var(--merriweather) Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  display: flex;
  flex-direction: column;
  gap: 3rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

main {
  padding-inline: 2rem;
  flex: 1 1 auto;
}

